--- a/source/landscaping.html
+++ b/source/landscaping.html
@@ -13,10 +13,17 @@
         <h1 class="page-title landscaping__title">
           Форма предложения по благоустройству территории
         </h1>
-        <a href="#" class="landscaping__rules-link">
-          Правила размещения проектов
+        <a class="landscaping__rules-link link link--blue link--rules" href="#">
+          <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <path fill="currentColor" fill-rule="evenodd"
+              d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
+              clip-rule="evenodd" />
+            <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor" rx="1" />
+            <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor" rx="1" />
+          </svg>
+          <span>Правила размещения проектов</span>
         </a>
-        <form action="#" class="landscaping-form">
+        <form action="#" class="landscaping-form" id="js-improvement-form">
           <div class="landscaping-form__section landscaping-form__section--description">
             <h2 class="landscaping-form__title">
               Название и описание предложения
@@ -29,10 +36,10 @@
             </div>
             <div class="landscaping-form__textarea-container">
               <textarea name="description" id="description" cols="30" rows="10"
-                class="landscaping-form__textarea landscaping-form__textarea--error landscaping-form__description"
+                class="landscaping-form__textarea landscaping-form__description"
                 placeholder="Описание  (ограничение 500 символов)" aria-label="Описание предложения"
                 required></textarea>
-              <span class="landscaping-form__textarea-error landscaping-form__textarea-error--show">Вы превысили лимит
+              <span class="landscaping-form__textarea-error">Вы превысили лимит
                 на хх символов</span>
             </div>
           </div>
@@ -59,9 +66,19 @@
           </div>
           <div class="landscaping-form__button-wrapper">
             <button class="button button--white">Отменить</button>
-            <button type="submit" class="button button--blue landscaping-form__submit-btn">
+            <button type="button" class="button button--blue landscaping-form__submit-btn" id="improvement-submit-btn">
               Отправить на модерацию
             </button>
+          </div>
+          <div class="confirmation-popup">
+            <div class="confirmation-popup__body">
+              <button type="button" class="confirmation-popup__close-btn" aria-label="Отмена"></button>
+              <p>После отправки предложения на модерацию внести изменения будет нельзя</p>
+              <div class="confirmation-popup__buttons-wrap">
+                <button type="button" class="confirmation-popup__back-btn button button--white">Вернуться</button>
+                <button type="submit" class="confirmation-popup__submit-btn button button--blue">Отправить</button>
+              </div>
+            </div>
           </div>
         </form>
       </div>
