--- a/source/proposal-page-implemented.html
+++ b/source/proposal-page-implemented.html
@@ -31,7 +31,7 @@
               </svg>
               <span class="project-vote__expire-value">Голосование завершено</span>
             </p>
-            <div class="project-vote__like-counter">
+            <div class="project-vote__like-counter project-vote__like-counter--disabled">
               <span>Проголосовало</span>&nbsp;<span class="project-vote__value">504</span>
             </div>
           </div>
@@ -346,14 +346,14 @@
         </div>
         <div class="proposal__map">
           <h2 class="subtitle subtitle--large">Карта проблемной территории</h2>
-          <a class="proposal__address address-pin" href="#">
+          <div class="proposal__address address-pin">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M11.9624 1.64129C10.904 0.582939 9.49678 0 8.00014 0C6.50319 0 5.09625 0.582939 4.0379 1.64129C2.07929 3.59961 1.83588 7.28426 3.51077 9.51666L8.00014 16L12.4828 9.52572C14.1644 7.28426 13.921 3.59961 11.9624 1.64129ZM8.05186 7.5972C6.92426 7.5972 6.00645 6.6794 6.00645 5.5518C6.00645 4.4242 6.92426 3.5064 8.05186 3.5064C9.17946 3.5064 10.0973 4.4242 10.0973 5.5518C10.0973 6.6794 9.17946 7.5972 8.05186 7.5972Z"
                 fill="currentColor" />
             </svg>
             <span>Константина Симонова, 5к2</span>
-          </a>
+          </div>
           <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3A632dc64482e20035a9e82717af6071fd69e61f588fe2400013fa13d65e070cb6&amp;source=constructor" title="Интерактивная карта">
           </iframe>
