--- a/source/landscaping.html
+++ b/source/landscaping.html
@@ -65,7 +65,7 @@
               width="800" height="600" title="Карта"></iframe>
           </div>
           <div class="landscaping-form__button-wrapper">
-            <button class="button button--white">Отменить</button>
+            <button type="button" class="button button--white">Отменить</button>
             <button type="button" class="button button--blue landscaping-form__submit-btn" id="improvement-submit-btn">
               Отправить на модерацию
             </button>
