--- a/source/proposal-page-voting.html
+++ b/source/proposal-page-voting.html
@@ -187,7 +187,7 @@
   <include src="source/components/footer.html"></include>
   <include src="source/components/cookie.html"></include>
   <include src="source/components/up-btn.html"></include>
-  <div class="gallery-popup js-gallery-popup popup js-popup">
+  <div class="gallery-popup gallery-popup--proposal js-gallery-popup popup js-popup">
     <div class="popup__container">
       <div class="popup__overlay js-popup__overlay"></div>
       <div class="gallery-popup__content popup__content">
