добавляет ссылку в список

--- a/source/activity-improvement.html
+++ b/source/activity-improvement.html
@@ -52,7 +52,7 @@
                 </svg>
                 <span>Константина Симонова, 5к2</span>
               </div>
-              <p class="proposal-list__title">Рыбным текстом называется для временного</p>
+              <a href="#" class="proposal-list__title">Рыбным текстом называется для временного</a>
               <span class="proposal-list__status">Ожидает модерации</span>
             </li>
           </ul>
