--- a/source/improvement-list.html
+++ b/source/improvement-list.html
@@ -86,7 +86,7 @@
                       </svg>
                       <span>Константина Симонова, 5к2</span>
                     </div>
-                    <p class="proposal-list__title proposal-list__title--shorter">Рыбным текстом называется для временного</p>
+                    <a href="#" class="proposal-list__title proposal-list__title--shorter">Рыбным текстом называется для временного</a>
                     <div class="proposal-list__like-counter">
                       <span>1 080</span>
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +103,7 @@
                       </svg>
                       <span>Константина Симонова, 5к2</span>
                     </a>
-                    <p class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</p>
+                    <a href="#" class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</a>
                     <div class="proposal-list__like-counter">
                       <span>1 024</span>
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +120,7 @@
                       </svg>
                       <span>Константина Симонова, 5к2</span>
                     </a>
-                    <p class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</p>
+                    <a href="#" class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</a>
                     <div class="proposal-list__like-counter">
                       <span>1 024</span>
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -137,7 +137,7 @@
                       </svg>
                       <span>Константина Симонова, 5к2</span>
                     </a>
-                    <p class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</p>
+                    <a href="#" class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</a>
                     <div class="proposal-list__like-counter">
                       <span>1 024</span>
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
