меняет функцию селекта на странице благоустройство

--- a/source/improvement-list.html
+++ b/source/improvement-list.html
@@ -64,7 +64,7 @@
                     набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а
                     также от распределения текста на.
                 </p>
-                <form class="area-improvement__select form-select js-form-select">
+                <form class="area-improvement__select form-select js-form-select-improvement">
                   <select name="category-select" id="category-select" title="Открыть фильтр">
                     <option value="Сначала популярные" title="Сначала популярные">Сначала популярные</option>
                     <option value="Сначала непопулярные" title="Сначала непопулярные">Сначала непопулярные</option>
