--- a/source/improvement-list.html
+++ b/source/improvement-list.html
@@ -9,7 +9,6 @@
 
     <main>
         <section class="area-improvement area-improvement--list section">
-          <h2 class="visually-hidden">Предложения по благоустройству территории</h2>
             <div class="container">
                 <a class="area-improvement__back-btn back-btn" href="main-page.html">
                     <svg width="8" height="14">
@@ -74,12 +73,12 @@
                 </form>
                 <ul class="area-improvement__proposal-list proposal-list">
                   <li class="proposal-list__item">
-                    <a href="#" class="proposal-list__account">
+                    <div class="proposal-list__account">
                       <svg width="16" height="16">
                         <use xlink:href="img/sprite.svg#icon-user"></use>
                       </svg>
                       <span>Ваше предложение</span>
-                    </a>
+                    </div>
                     <div class="proposal-list__address">
                       <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11.9624 1.64129C10.904 0.582939 9.49678 0 8.00014 0C6.50319 0 5.09625 0.582939 4.0379 1.64129C2.07929 3.59961 1.83588 7.28426 3.51077 9.51666L8.00014 16L12.4828 9.52572C14.1644 7.28426 13.921 3.59961 11.9624 1.64129ZM8.05186 7.5972C6.92426 7.5972 6.00645 6.6794 6.00645 5.5518C6.00645 4.4242 6.92426 3.5064 8.05186 3.5064C9.17946 3.5064 10.0973 4.4242 10.0973 5.5518C10.0973 6.6794 9.17946 7.5972 8.05186 7.5972Z" fill="currentColor"></path>
@@ -87,7 +86,7 @@
                       <span>Константина Симонова, 5к2</span>
                     </div>
                     <a href="#" class="proposal-list__title proposal-list__title--shorter">Рыбным текстом называется для временного</a>
-                    <div class="proposal-list__like-counter">
+                    <div class="proposal-list__like-counter proposal-list__like-counter--liked">
                       <span>1 080</span>
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="stroked" d="M1.75 24H4.25C5.215 24 6 23.215 6 22.25V21.884C7.512 22.654 10.946 24 16.531 24H18.131C20.449 24 22.417 22.342 22.81 20.058L23.93 13.558C24.168 12.171 23.785 10.761 22.881 9.687C21.978 8.615 20.654 8 19.251 8H14.715C14.998 7.24 15.281 6.132 15.281 4.75C15.281 0.993 13.155 0 12.031 0C9.955 0 9.781 1.936 9.781 3.75C9.781 5.964 7.298 7.804 5.987 8.622C5.92 7.718 5.171 7 4.25 7H1.75C0.785 7 0 7.785 0 8.75V22.25C0 23.215 0.785 24 1.75 24ZM11.281 3.75C11.281 1.5 11.662 1.5 12.031 1.5C12.735 1.5 13.781 2.366 13.781 4.75C13.781 6.966 12.913 8.324 12.907 8.334C12.754 8.564 12.739 8.86 12.87 9.104C13 9.348 13.255 9.5 13.531 9.5H19.251C20.211 9.5 21.116 9.92 21.734 10.653C22.353 11.387 22.615 12.353 22.452 13.302L21.332 19.802C21.063 21.364 19.717 22.499 18.131 22.499H16.531C9.728 22.5 6.32 20.372 6 20.161V10.351C6.833 9.909 11.281 7.379 11.281 3.75ZM1.5 8.75C1.5 8.612 1.612 8.5 1.75 8.5H4.25C4.388 8.5 4.5 8.612 4.5 8.75V22.25C4.5 22.386 4.386 22.5 4.25 22.5H1.75C1.612 22.5 1.5 22.388 1.5 22.25V8.75Z" fill="inherit"></path>
@@ -121,7 +120,7 @@
                       <span>Константина Симонова, 5к2</span>
                     </a>
                     <a href="#" class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</a>
-                    <div class="proposal-list__like-counter">
+                    <div class="proposal-list__like-counter proposal-list__like-counter--liked">
                       <span>1 024</span>
                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="stroked" d="M1.75 24H4.25C5.215 24 6 23.215 6 22.25V21.884C7.512 22.654 10.946 24 16.531 24H18.131C20.449 24 22.417 22.342 22.81 20.058L23.93 13.558C24.168 12.171 23.785 10.761 22.881 9.687C21.978 8.615 20.654 8 19.251 8H14.715C14.998 7.24 15.281 6.132 15.281 4.75C15.281 0.993 13.155 0 12.031 0C9.955 0 9.781 1.936 9.781 3.75C9.781 5.964 7.298 7.804 5.987 8.622C5.92 7.718 5.171 7 4.25 7H1.75C0.785 7 0 7.785 0 8.75V22.25C0 23.215 0.785 24 1.75 24ZM11.281 3.75C11.281 1.5 11.662 1.5 12.031 1.5C12.735 1.5 13.781 2.366 13.781 4.75C13.781 6.966 12.913 8.324 12.907 8.334C12.754 8.564 12.739 8.86 12.87 9.104C13 9.348 13.255 9.5 13.531 9.5H19.251C20.211 9.5 21.116 9.92 21.734 10.653C22.353 11.387 22.615 12.353 22.452 13.302L21.332 19.802C21.063 21.364 19.717 22.499 18.131 22.499H16.531C9.728 22.5 6.32 20.372 6 20.161V10.351C6.833 9.909 11.281 7.379 11.281 3.75ZM1.5 8.75C1.5 8.612 1.612 8.5 1.75 8.5H4.25C4.388 8.5 4.5 8.612 4.5 8.75V22.25C4.5 22.386 4.386 22.5 4.25 22.5H1.75C1.612 22.5 1.5 22.388 1.5 22.25V8.75Z" fill="inherit"></path>
