--- a/source/improvement-fork-4.html
+++ b/source/improvement-fork-4.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li class="proposal-winners__item proposal-winners__item--yours">
-                        <p href="#" class="proposal-winners_yours">
+                        <p class="proposal-winners_yours">
                             <svg width="10" height="12" viewBox="0 0 10 12" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <use xlink:href="img/sprite.svg#proposal-user"></use>
