--- a/source/projects-2.html
+++ b/source/projects-2.html
@@ -7,7 +7,7 @@
 
     <include src="source/components/header.html"></include>
 
-    <main class="projects page-content">
+    <main class="projects projects-2 page-content">
         <div class="container">
             <a class="back-btn" href="main-page.html">
                 <svg width="8" height="14">
@@ -67,7 +67,6 @@
                                 <option value="Дороги" title="Дороги">Дороги</option>
                                 <option value="Доходогенерирующие проекты" title="Доходогенерирующие проекты">
                                     Доходогенерирующие проекты</option>
-                                <option value="ЖКХ" title="ЖКХ">ЖКХ</option>
                                 <option value="Массовое мероприятие" title="Массовое мероприятие">Массовое мероприятие
                                 </option>
                                 <option value="Места захоронения" title="Места захоронения">Места захоронения</option>
