Добавил страницу одного обсуждения

--- a/source/index.html
+++ b/source/index.html
@@ -135,6 +135,10 @@
         <li>
           <a href="project-budgets.html" target="_blank">Параллельные голосования - разводящая</a>
         </li>
+        <br />
+        <li>
+          <a href="hearings-1.html" target="_blank">Страница одного обсуждения</a>
+        </li>
       </ul>
     </div>
   </main>
