small fix to btn

--- a/source/hearings-1.html
+++ b/source/hearings-1.html
@@ -333,7 +333,7 @@
                         <a href="#" class="all-comments__button button button--light-blue">ПОКАЗАТЬ ЕЩЁ</a>
                     </section>
                 </div>
-                <a href="#" class="hearings__back-btn button button--light-blue">К списку обсуждений и слушаний</a>
+                <a href="#" class="hearings__back-btn button button--light-blue">К списку обсуждений и&nbsp;слушаний</a>
             </section>
         </div>
     </main>
