--- a/source/index.html
+++ b/source/index.html
@@ -137,7 +137,10 @@
         </li>
         <br />
         <li>
-          <a href="hearings-1.html" target="_blank">Страница одного обсуждения</a>
+          <a href="hearings-1.html" target="_blank">Страница одного обсуждения 1</a>
+        </li>
+        <li>
+          <a href="hearings-4.html" target="_blank">Страница одного обсуждения 4</a>
         </li>
       </ul>
     </div>
