--- a/source/project-page.html
+++ b/source/project-page.html
@@ -54,9 +54,13 @@
             В соответствии с приказом Министерства строительства Российской Федерации № 75895422 от 20.01.2020 персональные данные участников голосования (в составе ФИО, дата рождения, номер паспорта) будут переданы уполномоченным ответственной организации. Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока
           </p>
 
-          <button class="info-banner__button info-banner-button">
-            <span class="info-banner-button__text">
+          <button class="info-banner__button info-banner-button" data-alt-text="Свернуть">
+            <span class="info-banner-button__text info-banner-button__text_closed">
               Развернуть
+            </span>
+
+            <span class="info-banner-button__text info-banner-button__text_opened">
+              Свернуть
             </span>
 
             <svg
