--- a/source/index.html
+++ b/source/index.html
@@ -145,6 +145,10 @@
         <li>
           <a href="hearings-4.html" target="_blank">Страница одного обсуждения 4</a>
         </li>
+        <li>
+          <a href="hearings-5.html" target="_blank">Страница одного обсуждения 5,6 //Клик на инфо баннер показывает 6
+            вариант страницы, добавил чтобы не копировать всю страницу снова</a>
+        </li>
       </ul>
     </div>
   </main>
