--- a/source/index.html
+++ b/source/index.html
@@ -149,6 +149,10 @@
           <a href="hearings-5.html" target="_blank">Страница одного обсуждения 5,6 //Клик на инфо баннер показывает 6
             вариант страницы, добавил чтобы не копировать всю страницу снова</a>
         </li>
+        <br />
+        <li>
+          <a href="public-debates-list.html" target="_blank">Разводящая по обсуждениям</a>
+        </li>
       </ul>
     </div>
   </main>
