стилизация планшетной версии

--- a/source/public-debates-list.html
+++ b/source/public-debates-list.html
@@ -33,9 +33,9 @@
                     <option value="Подведение итогов" title="Подведение итогов">Подведение итогов</option>
                     <option value="Подведены итоги" title="Подведены итоги">Подведены итоги</option>
                   </select>
-                  <div class="form-select__checkbox-wrapper">
+                  <div class="form-select__checkbox-wrapper form-checkbox">
                     <input type="checkbox" name="favorites-checkbox" id="favorites-checkbox">
-                    <label for="favorites-checkbox">Только избранное</label>
+                    <label for="favorites-checkbox">Только избранные</label>
                   </div>
                 </form>
                 <ul class="public-debate__list">
