добавляет страницу активность разводящая

--- a/source/index.html
+++ b/source/index.html
@@ -79,6 +79,9 @@
         </li>
         <br />
         <li>
+          <a href="activity-index.html" target="_blank">Активность -- Разводящая</a>
+        </li>
+        <li>
           <a href="activity-discussions.html" target="_blank">Активность -- Обсуждения</a>
         </li>
         <li>
