--- a/source/hearings-1.html
+++ b/source/hearings-1.html
@@ -256,21 +256,26 @@
                 <div class="hearings__comments">
                     <section class="commentary-add">
                         <h2>Добавить комментарий</h2>
-                        <div class="commentary-add__description">
-                            <p>Оставьте свое мнение о проводимых общественных обсуждениях. После проведения модерации
-                                оно будет принято к сведению и может повлиять на анонс публичного слушания. В случае
-                                отклонения вы получите комментарий о причине. </p>
-                        </div>
-                        <div class="commentary-add__textarea">
-                            <textarea name="commentarytextarea" placeholder="Ограничение 1 000 символов" required
-                                rows="4" aria-label="Добавить комментарий"></textarea>
-                            <p id="textarea-error-field">Осталось символов: 500</p>
-                        </div>
-                        <div class="commentary-add__bottom-wrapper">
-                            <p>Отредактировать или удалить комментарий вы можете только в течение двух часов с момента
-                                публикации.</p>
-                            <button type="submit" class="commentary-add__button button button--blue">Отправить</button>
-                        </div>
+                        <form action="#" novalidate>
+                            <div class="commentary-add__description">
+                                <p>Оставьте свое мнение о проводимых общественных обсуждениях. После проведения
+                                    модерации
+                                    оно будет принято к сведению и может повлиять на анонс публичного слушания. В случае
+                                    отклонения вы получите комментарий о причине. </p>
+                            </div>
+                            <div class="commentary-add__textarea">
+                                <textarea name="commentarytextarea" placeholder="Ограничение 1 000 символов" required
+                                    rows="4" aria-label="Добавить комментарий"></textarea>
+                                <p id="textarea-error-field">Осталось символов: 500</p>
+                            </div>
+                            <div class="commentary-add__bottom-wrapper">
+                                <p>Отредактировать или удалить комментарий вы можете только в течение двух часов с
+                                    момента
+                                    публикации.</p>
+                                <button type="submit"
+                                    class="commentary-add__button button button--blue">Отправить</button>
+                            </div>
+                        </form>
                     </section>
                     <section class="all-comments">
                         <div class="all-comments__top">
