--- a/source/ui-kit.html
+++ b/source/ui-kit.html
@@ -1,121 +1,184 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <include src="source/components/head.html"></include>
+<include src="source/components/head.html"></include>
 
-  <body class="page-body">
-    <div class="container">
-      <h1>UI kit</h1>
-      <h2>Кнопки</h2>
-      <button type="button" class="button button--blue">Кнопка</button>
-      <a href="#" class="button button--light-blue">
-        <span>ПОСМОТРЕТЬ ВСЕ</span>
-        <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="img/sprite.svg#icon-arrow"></use>
-        </svg>
-      </a>
-      <button type="button" class="button button--white">Кнопка</button>
-      <button type="submit" class="button button--grey">ПРОГОЛОСОВАТЬ против всех</button>
-      <button type="button" class="button-star">
-        <span class="visually-hidden">Добавить в избранное</span>
-        <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="img/sprite.svg#icon-star"></use>
-        </svg>
-      </button>
-      <button type="button" class="button-star button-star--active">
-        <span class="visually-hidden">Добавить в избранное</span>
-        <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="img/sprite.svg#icon-star"></use>
-        </svg>
-      </button>
-      <h2>Ссылки</h2>
-      <a href="#" class="link-arrow">
-        <span>Перейти</span>
-        <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="img/sprite.svg#icon-arrow"></use>
-        </svg>
-      </a>
-      <a href="#" class="link-arrow link-arrow--small">
-        <span>Перейти к опросу</span>
-        <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="img/sprite.svg#icon-arrow"></use>
-        </svg>
-      </a>
-      <a href="#" class="link-arrow link-arrow--grey">
-        <span>Архив опросов</span>
-        <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use xlink:href="img/sprite.svg#icon-arrow"></use>
-        </svg>
-      </a>
-      <h2>Форма</h2>
-      <form action="#" class="form">
-        <div class="form-checkbox">
-          <input type="checkbox" name="checkbox" id="checkbox" value="checkbox">
-          <label for="checkbox">Я чекбокс</label>
-        </div>
-        <div class="form-checkbox">
-          <input type="checkbox" name="checkbox-2" id="checkbox-2" value="checkbox-2" disabled>
-          <label for="checkbox-2">Я чекбокс</label>
-        </div>
-        <div class="form-radio">
-          <input type="radio" name="radio" id="radio-1" value="radio-1" checked>
-          <label for="radio-1">Я радиобаттон</label>
-        </div>
-        <div class="form-radio">
-          <input type="radio" name="radio" id="radio-2" value="radio-2">
-          <label for="radio-2">Я радиобаттон</label>
-        </div>
-        <div class="form-radio">
-          <input type="radio" name="radio" id="radio-3" value="radio-3" disabled>
-          <label for="radio-3">Я радиобаттон</label>
-        </div>
-        <div class="form-select js-form-select">
-            <select name="projects-select" id="projects-select">
-              <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
-              <option value="Благоустройство" title="Благоустройство">Благоустройство</option>
-              <option value="Бытовое обслуживание" title="Бытовое обслуживание">Бытовое обслуживание</option>
-              <option value="Водоснабжение" title="Водоснабжение">Водоснабжение</option>
-              <option value="Детские площадки" title="Детские площадки">Детские площадки</option>
-              <option value="Дороги" title="Дороги">Дороги</option>
-              <option value="Доходогенерирующие проекты" title="Доходогенерирующие проекты">Доходогенерирующие проекты</option>
-              <option value="ЖКХ" title="ЖКХ">ЖКХ</option>
-              <option value="Массовое мероприятие" title="Массовое мероприятие">Массовое мероприятие</option>
-              <option value="Места захоронения" title="Места захоронения">Места захоронения</option>
-              <option value="Места массового пользования" title="Места массового пользования">Места массового пользования</option>
-              <option value="Муниципальные образовательные организации" title="Муниципальные образовательные организации">Муниципальные образовательные организации</option>
-              <option value="Народное творчество" title="Народное творчество">Народное творчество</option>
-              <option value="Объекты культурного наследия" title="Объекты культурного наследия">Объекты культурного наследия</option>
-              <option value="Объекты культуры" title="Объекты культуры">Объекты культуры</option>
-              <option value="Пожарная безопасность" title="Пожарная безопасность">Пожарная безопасность</option>
-              <option value="Сбор бытовых отходов" title="Сбор бытовых отходов">Сбор бытовых отходов</option>
-              <option value="Связь" title="Связь">Связь</option>
-              <option value="Спорт" title="Спорт">Спорт</option>
-              <option value="Туризм" title="Туризм">Туризм</option>
-              <option value="Фельдшерско-акушерские пункты" title="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты</option>
-            </select>
-        </div>
-      </form>
-      <h2>Пагинация</h2>
-      <div class="paginator">
-        <a class="paginator__item paginator__item--prev paginator__item--disabled" aria-label="предыдущий">
-            <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="img/sprite.svg#icon-paginator-prev"></use>
-          </svg>
-        </a>
-        <a class="paginator__item paginator__item--current">1</a>
-        <a class="paginator__item" href="#2">2</a>
-        <a class="paginator__item" href="#3">3</a>
-        <span class="paginator__item paginator__item--hidden">&hellip;</span>
-        <a class="paginator__item paginator__item--hidden" href="#9">9</a>
-        <a class="paginator__item paginator__item--hidden" href="#10">10</a>
-        <a class="paginator__item paginator__item--hidden" href="#11">11</a>
-        <a class="paginator__item paginator__item--next" href="#next" aria-label="следующий">
-          <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="img/sprite.svg#icon-paginator-next"></use>
-          </svg>
-        </a>
+<body class="page-body">
+  <div class="container">
+    <h1>UI kit</h1>
+    <h2>Кнопки</h2>
+    <button type="button" class="button button--blue">Кнопка</button>
+    <a href="#" class="button button--light-blue">
+      <span>ПОСМОТРЕТЬ ВСЕ</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <button type="button" class="button button--white">Кнопка</button>
+    <button type="submit" class="button button--grey">ПРОГОЛОСОВАТЬ против
+      всех</button>
+    <button type="button" class="button-star">
+      <span class="visually-hidden">Добавить в избранное</span>
+      <svg width="20" height="19" viewBox="0 0 20 19" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-star"></use>
+      </svg>
+    </button>
+    <button type="button" class="button-star button-star--active">
+      <span class="visually-hidden">Добавить в избранное</span>
+      <svg width="20" height="19" viewBox="0 0 20 19" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-star"></use>
+      </svg>
+    </button>
+    <button class="button-like" type="button">
+      <span>1520</span>
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path class="stroked"
+          d="M1.75 24H4.25C5.215 24 6 23.215 6 22.25V21.884C7.512 22.654 10.946 24 16.531 24H18.131C20.449 24 22.417 22.342 22.81 20.058L23.93 13.558C24.168 12.171 23.785 10.761 22.881 9.687C21.978 8.615 20.654 8 19.251 8H14.715C14.998 7.24 15.281 6.132 15.281 4.75C15.281 0.993 13.155 0 12.031 0C9.955 0 9.781 1.936 9.781 3.75C9.781 5.964 7.298 7.804 5.987 8.622C5.92 7.718 5.171 7 4.25 7H1.75C0.785 7 0 7.785 0 8.75V22.25C0 23.215 0.785 24 1.75 24ZM11.281 3.75C11.281 1.5 11.662 1.5 12.031 1.5C12.735 1.5 13.781 2.366 13.781 4.75C13.781 6.966 12.913 8.324 12.907 8.334C12.754 8.564 12.739 8.86 12.87 9.104C13 9.348 13.255 9.5 13.531 9.5H19.251C20.211 9.5 21.116 9.92 21.734 10.653C22.353 11.387 22.615 12.353 22.452 13.302L21.332 19.802C21.063 21.364 19.717 22.499 18.131 22.499H16.531C9.728 22.5 6.32 20.372 6 20.161V10.351C6.833 9.909 11.281 7.379 11.281 3.75ZM1.5 8.75C1.5 8.612 1.612 8.5 1.75 8.5H4.25C4.388 8.5 4.5 8.612 4.5 8.75V22.25C4.5 22.386 4.386 22.5 4.25 22.5H1.75C1.612 22.5 1.5 22.388 1.5 22.25V8.75Z"
+          fill="inherit" />
+        <path class="filled" fill-rule="evenodd" clip-rule="evenodd"
+          d="M7.7602 7.30702C7.41578 7.61371 7.19922 8.0442 7.19922 8.50538V21.407C7.19922 22.021 7.57177 22.5781 8.15411 22.7726C10.0334 23.4003 12.8027 23.9999 16.5302 23.9999H18.1302C20.4481 23.9999 22.4161 22.3419 22.8091 20.0579L23.9291 13.5579C24.1671 12.1709 23.7841 10.7609 22.8801 9.68694C21.9771 8.61495 20.6531 7.99995 19.2501 7.99995H14.7142C14.9972 7.23996 15.2802 6.13196 15.2802 4.74997C15.2802 0.992994 13.1542 0 12.0302 0C9.9542 0 9.7802 1.93599 9.7802 3.74998C9.7802 5.13486 8.80869 6.3734 7.7602 7.30702Z"
+          fill="inherit" />
+        <path class="filled" fill-rule="evenodd" clip-rule="evenodd"
+          d="M4.79997 8.61389C4.79561 8.6166 4.79128 8.6193 4.78697 8.62199C4.71997 7.718 3.97098 7 3.04998 7H1.74999C0.784995 7 0 7.785 0 8.74999V22.2499C0 23.2149 0.784995 23.9999 1.74999 23.9999H3.04998C4.01454 23.9999 4.79926 23.2156 4.79997 22.2512C4.79997 22.2508 4.79997 22.2503 4.79997 22.2499V21.8839L4.79997 8.61389Z"
+          fill="inherit" />
+      </svg>
+    </button>
+    <button class="button-like is-selected" type="button">
+      <span>920</span>
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path class="stroked"
+          d="M1.75 24H4.25C5.215 24 6 23.215 6 22.25V21.884C7.512 22.654 10.946 24 16.531 24H18.131C20.449 24 22.417 22.342 22.81 20.058L23.93 13.558C24.168 12.171 23.785 10.761 22.881 9.687C21.978 8.615 20.654 8 19.251 8H14.715C14.998 7.24 15.281 6.132 15.281 4.75C15.281 0.993 13.155 0 12.031 0C9.955 0 9.781 1.936 9.781 3.75C9.781 5.964 7.298 7.804 5.987 8.622C5.92 7.718 5.171 7 4.25 7H1.75C0.785 7 0 7.785 0 8.75V22.25C0 23.215 0.785 24 1.75 24ZM11.281 3.75C11.281 1.5 11.662 1.5 12.031 1.5C12.735 1.5 13.781 2.366 13.781 4.75C13.781 6.966 12.913 8.324 12.907 8.334C12.754 8.564 12.739 8.86 12.87 9.104C13 9.348 13.255 9.5 13.531 9.5H19.251C20.211 9.5 21.116 9.92 21.734 10.653C22.353 11.387 22.615 12.353 22.452 13.302L21.332 19.802C21.063 21.364 19.717 22.499 18.131 22.499H16.531C9.728 22.5 6.32 20.372 6 20.161V10.351C6.833 9.909 11.281 7.379 11.281 3.75ZM1.5 8.75C1.5 8.612 1.612 8.5 1.75 8.5H4.25C4.388 8.5 4.5 8.612 4.5 8.75V22.25C4.5 22.386 4.386 22.5 4.25 22.5H1.75C1.612 22.5 1.5 22.388 1.5 22.25V8.75Z"
+          fill="inherit" />
+        <path class="filled" fill-rule="evenodd" clip-rule="evenodd"
+          d="M7.7602 7.30702C7.41578 7.61371 7.19922 8.0442 7.19922 8.50538V21.407C7.19922 22.021 7.57177 22.5781 8.15411 22.7726C10.0334 23.4003 12.8027 23.9999 16.5302 23.9999H18.1302C20.4481 23.9999 22.4161 22.3419 22.8091 20.0579L23.9291 13.5579C24.1671 12.1709 23.7841 10.7609 22.8801 9.68694C21.9771 8.61495 20.6531 7.99995 19.2501 7.99995H14.7142C14.9972 7.23996 15.2802 6.13196 15.2802 4.74997C15.2802 0.992994 13.1542 0 12.0302 0C9.9542 0 9.7802 1.93599 9.7802 3.74998C9.7802 5.13486 8.80869 6.3734 7.7602 7.30702Z"
+          fill="inherit" />
+        <path class="filled" fill-rule="evenodd" clip-rule="evenodd"
+          d="M4.79997 8.61389C4.79561 8.6166 4.79128 8.6193 4.78697 8.62199C4.71997 7.718 3.97098 7 3.04998 7H1.74999C0.784995 7 0 7.785 0 8.74999V22.2499C0 23.2149 0.784995 23.9999 1.74999 23.9999H3.04998C4.01454 23.9999 4.79926 23.2156 4.79997 22.2512C4.79997 22.2508 4.79997 22.2503 4.79997 22.2499V21.8839L4.79997 8.61389Z"
+          fill="inherit" />
+      </svg>
+    </button>
+    <h2>Ссылки</h2>
+    <a href="#" class="link-arrow">
+      <span>Перейти</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <a href="#" class="link-arrow link-arrow--small">
+      <span>Перейти к опросу</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <a href="#" class="link-arrow link-arrow--grey">
+      <span>Архив опросов</span>
+      <svg width="33" height="12" viewBox="0 0 33 12" fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+    </a>
+    <h2>Форма</h2>
+    <form action="#" class="form">
+      <div class="form-checkbox">
+        <input type="checkbox" name="checkbox" id="checkbox" value="checkbox">
+        <label for="checkbox">Я чекбокс</label>
       </div>
+      <div class="form-checkbox">
+        <input type="checkbox" name="checkbox-2" id="checkbox-2"
+          value="checkbox-2" disabled>
+        <label for="checkbox-2">Я чекбокс</label>
+      </div>
+      <div class="form-radio">
+        <input type="radio" name="radio" id="radio-1" value="radio-1" checked>
+        <label for="radio-1">Я радиобаттон</label>
+      </div>
+      <div class="form-radio">
+        <input type="radio" name="radio" id="radio-2" value="radio-2">
+        <label for="radio-2">Я радиобаттон</label>
+      </div>
+      <div class="form-radio">
+        <input type="radio" name="radio" id="radio-3" value="radio-3" disabled>
+        <label for="radio-3">Я радиобаттон</label>
+      </div>
+      <div class="form-select js-form-select">
+        <select name="projects-select" id="projects-select">
+          <option value="Библиотеки" title="Библиотеки">Библиотеки</option>
+          <option value="Благоустройство" title="Благоустройство">
+            Благоустройство</option>
+          <option value="Бытовое обслуживание" title="Бытовое обслуживание">
+            Бытовое обслуживание</option>
+          <option value="Водоснабжение" title="Водоснабжение">Водоснабжение
+          </option>
+          <option value="Детские площадки" title="Детские площадки">Детские
+            площадки</option>
+          <option value="Дороги" title="Дороги">Дороги</option>
+          <option value="Доходогенерирующие проекты"
+            title="Доходогенерирующие проекты">Доходогенерирующие проекты
+          </option>
+          <option value="ЖКХ" title="ЖКХ">ЖКХ</option>
+          <option value="Массовое мероприятие" title="Массовое мероприятие">
+            Массовое мероприятие</option>
+          <option value="Места захоронения" title="Места захоронения">Места
+            захоронения</option>
+          <option value="Места массового пользования"
+            title="Места массового пользования">Места массового пользования
+          </option>
+          <option value="Муниципальные образовательные организации"
+            title="Муниципальные образовательные организации">Муниципальные
+            образовательные организации</option>
+          <option value="Народное творчество" title="Народное творчество">
+            Народное творчество</option>
+          <option value="Объекты культурного наследия"
+            title="Объекты культурного наследия">Объекты культурного наследия
+          </option>
+          <option value="Объекты культуры" title="Объекты культуры">Объекты
+            культуры</option>
+          <option value="Пожарная безопасность" title="Пожарная безопасность">
+            Пожарная безопасность</option>
+          <option value="Сбор бытовых отходов" title="Сбор бытовых отходов">Сбор
+            бытовых отходов</option>
+          <option value="Связь" title="Связь">Связь</option>
+          <option value="Спорт" title="Спорт">Спорт</option>
+          <option value="Туризм" title="Туризм">Туризм</option>
+          <option value="Фельдшерско-акушерские пункты"
+            title="Фельдшерско-акушерские пункты">Фельдшерско-акушерские пункты
+          </option>
+        </select>
+      </div>
+    </form>
+    <h2>Пагинация</h2>
+    <div class="paginator">
+      <a class="paginator__item paginator__item--prev paginator__item--disabled"
+        aria-label="предыдущий">
+        <svg width="18" height="10" viewBox="0 0 18 10" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <use xlink:href="img/sprite.svg#icon-paginator-prev"></use>
+        </svg>
+      </a>
+      <a class="paginator__item paginator__item--current">1</a>
+      <a class="paginator__item" href="#2">2</a>
+      <a class="paginator__item" href="#3">3</a>
+      <span class="paginator__item paginator__item--hidden">&hellip;</span>
+      <a class="paginator__item paginator__item--hidden" href="#9">9</a>
+      <a class="paginator__item paginator__item--hidden" href="#10">10</a>
+      <a class="paginator__item paginator__item--hidden" href="#11">11</a>
+      <a class="paginator__item paginator__item--next" href="#next"
+        aria-label="следующий">
+        <svg width="18" height="10" viewBox="0 0 18 10" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <use xlink:href="img/sprite.svg#icon-paginator-next"></use>
+        </svg>
+      </a>
     </div>
-    <script src="js/libs.js"></script>
-    <script src="js/main.min.js"></script>
-  </body>
+  </div>
+  <script src="js/libs.js"></script>
+  <script src="js/main.min.js"></script>
+</body>
+
 </html>
