убирает ошибки валидатора

--- a/source/project-form.html
+++ b/source/project-form.html
@@ -103,7 +103,7 @@
                 <span class="contacts-inputs__error-text">Введите только числа</span>
             </div>
             <div class="contacts-inputs__wrapper contacts-inputs__wrapper--phone">
-                <input type="phone" name="phone" id="phone" class="contacts-inputs__input text-input"
+                <input type="tel" name="phone" id="phone" class="contacts-inputs__input text-input"
                   placeholder="Телефон" aria-label="Введите телефон" />
                 <span class="contacts-inputs__error-text">Введите только числа</span>
             </div>
@@ -129,9 +129,9 @@
               <label for="user-images"><span>Загрузить изображение</span></label>
             </div>
           </div>
-          <div class="landscaping-form__button-wrapper">
+          <div class="new-project__button-wrapper">
             <button type="button" class="button button--white">Отменить</button>
-            <button type="button" class="button button--blue landscaping-form__submit-btn" id="improvement-submit-btn">
+            <button type="button" class="button button--blue new-project__submit-btn" id="improvement-submit-btn">
               Отправить на модерацию
             </button>
           </div>
