добавляет попап для форматов файлов

--- a/source/project-form.html
+++ b/source/project-form.html
@@ -153,6 +153,7 @@
   <include src="source/components/footer.html"></include>
   <include src="source/components/cookie.html"></include>
   <include src="source/components/up-btn.html"></include>
+  <include src="source/components/file-format.html"></include>
 
   <template id="pin">
     <button type="button" class="landscaping__pin"><img src="img/pin.png" width="36" height="54" draggable="false"
