добавляет страницу с ошибками

--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,9 @@
         <li>
           <a href="service-unavailable.html" target="_blank">Сервис недоступен</a>
         </li>
+        <li>
+          <a href="text-error.html" target="_blank">Ошибка текстовая</a>
+        </li>
         <br />
         <li>
           <a href="composite-poll.html" target="_blank">Составной опрос</a>
