добавляет форму создания 2

--- a/source/index.html
+++ b/source/index.html
@@ -200,6 +200,9 @@
         <li>
           <a href="project-form.html" target="_blank">Форма добавления проекта</a>
         </li>
+        <li>
+          <a href="project-form-2.html" target="_blank">Форма добавления проекта 2</a>
+        </li>
       </ul>
     </div>
   </main>
